[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smfc"
description = "Super Micro Fan Control for Linux"
readme = "README.md"
version = "4.0.0-beta1"
authors = [
    { name = "Peter Sulyok", email = "peter@sulyok.net" }
]
requires-python = ">=3.8, <3.14"
keywords = ["supermicro", "linux", "daemon", "fancontrol"]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dependencies = [
    "pyudev==0.24.3",
    "pySMART==1.4.1"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Development Status :: 4 - Beta"
]

[project.urls]
Homepage = "https://github.com/petersulyok/smfc"
Changelog = "https://github.com/petersulyok/smfc/releases"
Issues = "https://github.com/petersulyok/smfc/issues"
[project.optional-dependencies]
test = [
    "coverage==7.6.12",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pylint==3.3.5"
]

[project.scripts]
smfc = "smfc.cmd:main"

[tool.setuptools]
packages = ["smfc"]
package-dir = {"" = "src"}

# pytest options
[tool.pytest.ini_options]
pythonpath = "src"
filterwarnings = [ "default", "ignore::pytest.PytestCollectionWarning"]

# coverage options
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "unittest.main()"
    ]

# pylint options
[tool.pylint.'MASTER']
init-hook='import sys; sys.path.append("."); sys.path.append("./src"); sys.path.append("./test")'
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable= [
    "missing-module-docstring", "too-many-instance-attributes", "too-many-arguments", "too-many-positional-arguments",
    "too-many-locals", "too-many-branches", "too-many-statements", "assignment-from-no-return"
    ]
