[project]
name = "smfc"
description = "Super Micro Fan Control for Linux"
readme = "README.md"
version = "4.1.1"
authors = [
    { name = "Peter Sulyok", email = "peter@sulyok.net" }
]
requires-python = ">=3.9, <4"
keywords = ["supermicro", "linux", "daemon", "fancontrol"]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Development Status :: 5 - Production/Stable"
]
dependencies = [
    "pyudev"
]
[dependency-groups]
dev = [
    "build",
    "coverage",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "twine"
]
lint = [
    "ruff",
    "pylint"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/petersulyok/smfc"
Changelog = "https://github.com/petersulyok/smfc/blob/main/CHANGELOG.md"
Issues = "https://github.com/petersulyok/smfc/issues"

[project.scripts]
smfc = "smfc.cmd:main"

[tool.uv]
default-groups = ["dev", "lint"]

[tool.setuptools]
packages = ["smfc"]
package-dir = {"" = "src"}

# pytest options
[tool.pytest.ini_options]
pythonpath = "src"
mock_use_standalone_module = true
filterwarnings = [
    "default",
    "ignore::pytest.PytestCollectionWarning"
]

# coverage options
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]

[tool.coverage.run]
omit = [
    "test/conftest.py",
    "test/smoke_runner.py"
]

# pylint options
[tool.pylint.main]
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable= [
    "missing-module-docstring", "too-many-instance-attributes", "too-many-arguments", "too-many-positional-arguments",
    "too-many-locals", "too-many-branches", "too-many-statements", "assignment-from-no-return", "too-many-public-methods"
]
